--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="testing image"
+    />
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="testing image"
+    title="testing title"
+    />
   </body>
 </html>
